--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,7 @@
     },
     "rules": {
         "semi": [2, "always"],
-        "indent": ["error", 4]
+        "indent": ["error", 4],
+        "comma-dangle": [0]
     }
 }
