--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
-  "name": "wellochatdemo",
-  "version": "1.0.0",
-  "description": "",
-  "main": "src/index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js",
-    "lint": "eslint src/*"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bioarnold/WelloChatDemo.git"
-  },
-  "author": "Peter Neumann",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/bioarnold/WelloChatDemo/issues"
-  },
-  "homepage": "https://github.com/bioarnold/WelloChatDemo#readme",
-  "dependencies": {
-    "express": "^4.17.1"
-  },
-  "devDependencies": {
-    "eslint": "^7.1.0",
-    "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1"
-  }
+    "name": "wellochatdemo",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node src/index.js",
+        "lint": "eslint src/*"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/bioarnold/WelloChatDemo.git"
+    },
+    "author": "Peter Neumann",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/bioarnold/WelloChatDemo/issues"
+    },
+    "homepage": "https://github.com/bioarnold/WelloChatDemo#readme",
+    "dependencies": {
+        "express": "^4.17.1",
+        "nedb": "^1.8.0",
+        "nedb-async": "^0.1.3"
+    },
+    "devDependencies": {
+        "eslint": "^7.1.0",
+        "eslint-config-standard": "^14.1.1",
+        "eslint-plugin-import": "^2.20.2",
+        "eslint-plugin-node": "^11.1.0",
+        "eslint-plugin-promise": "^4.2.1",
+        "eslint-plugin-standard": "^4.0.1"
+    }
 }
