--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "dependencies": {
         "express": "^4.17.1",
         "nedb": "^1.8.0",
-        "nedb-async": "^0.1.3"
+        "nedb-async": "^0.1.3",
+        "swagger-jsdoc": "^4.0.0",
+        "swagger-ui-express": "^4.1.4"
     },
     "devDependencies": {
         "eslint": "^7.1.0",
