--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "src/index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "mocha test/**/*.js",
         "start": "node src/index.js",
         "lint": "eslint src/*"
     },
@@ -19,6 +19,8 @@
     },
     "homepage": "https://github.com/bioarnold/WelloChatDemo#readme",
     "dependencies": {
+        "chai": "^4.2.0",
+        "chai-http": "^4.3.0",
         "express": "^4.17.1",
         "nedb": "^1.8.0",
         "nedb-async": "^0.1.3",
@@ -31,6 +33,7 @@
         "eslint-plugin-import": "^2.20.2",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^4.2.1",
-        "eslint-plugin-standard": "^4.0.1"
+        "eslint-plugin-standard": "^4.0.1",
+        "mocha": "^7.2.0"
     }
 }
