--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,7 @@
     "rules": {
         "semi": [2, "always"],
         "indent": ["error", 4],
-        "comma-dangle": [0]
+        "comma-dangle": [0],
+        "space-before-function-paren": [0]
     }
 }
