--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     },
     "homepage": "https://github.com/bioarnold/WelloChatDemo#readme",
     "dependencies": {
+        "body-parser": "^1.19.0",
         "express": "^4.17.1",
         "nedb": "^1.8.0",
         "nedb-async": "^0.1.3",
